8134749: SoftReferences declared dead too early

Reviewed-by: jmasa, tbenson